# web_extension_rust

./: .gitignore  README.md  build-content.js  build.sh  index.html  package.json
extension/: manifest firefox.json  manifest firefox144.json  manifest.json  manifest_chrome.json
extension/js/: background.js  content.js  popup.css  popup.html  popup.js  search.css  search.html  search.js  vim_mode.js
extension/js/configs/: constant.js
extension/js/src/: dom_logic.js  main.js  search_core.js  search_render.js  search_ui.js  vim_display.js  vim_mode.js
extension/js/wasm/: wasm_mod.d.ts  wasm_mod.js  wasm_mod_bg.wasm  wasm_mod_bg.wasm.d.ts
extension/js/wasm/snippets/wasm_mod-bc4ca452742d1bb1/: inline0.js  inline1.js
wasm_mod/: Cargo.toml
wasm_mod/src/: helper.rs  lib.rs  main.rs  wasm_bind.rs
