[package]
name = "wasm_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
futures = "0.3.31"
sublime_fuzzy = "0.7"

# [dependencies.web-sys]
# version = "0.3.82"
# features = [
#   "Window",
#   "Document",
#   "Element",
#   "KeyboardEvent",
#   "HtmlElement",
#   "console",
#   "EventTarget",
# ]

[profile.release]
opt-level = "z"
lto = true
